# Back-PEZ

./: pyproject.toml
back_pez/: docker-compose.yaml  main.py  reporte.xlsx  wrapper.py
back_pez/db/: dbconfig.py
back_pez/db/model/: actividad.py  asignatura.py  competencia.py  componente.py  componenteClase.py  contenido.py  horario.py  modoEnsenianza.py  perfilEstudiante.py  profesor.py  programa.py  reseniaAsignatura.py  subComponente.py  tematica.py  usuario.py
back_pez/negocio/: negocioAvancePrograma.py  negocioComponente.py  negocioReportes.py  negocioSugerenciaAsignatura.py  negocioSugerenciaPrograma.py
back_pez/routers/: routerActividad.py  routerAsignatura.py  routerCompetencia.py  routerComponente.py  routerComponenteClase.py  routerContenido.py  routerHorario.py  routerModoEnsenianza.py  routerPerfilEstudiante.py  routerProfesor.py  routerPrograma.py  routerResenia.py  routerSubComponente.py  routerUsuario.py
back_pez/scripts/: Asignaturas.json  Competencias.json  Contenido.json  MAINN.json  MINSC.json  MINSCDistri.json  SubComponentes.json  cargarDatos.py  datos.json  seguridad.json
