[tool.poetry]
name = "back-pez"
version = "0.1.0"
description = ""
authors = ["Laura-Mora <46944834+Laura-Mora@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "back_pez"}]

[tool.poetry.dependencies]
python = "^3.11"
prolog = "^0.3.1"
sqlalchemy = "^2.0.8"
psycopg2-binary = "^2.9.5"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
requests = "^2.29.0"
jose = {extras = ["cryptography"], version = "^1.0.0"}
passlib = "^1.7.4"
jwt = "^1.3.1"
pyjwt = "^2.7.0"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
pyswip = "^0.2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "back_pez.wrapper:start"
config = "back_pez.scripts.cargarDatos:main"